Adicionadas a rota para endpoints de manipulação das contas
